src/objects/Sponsor__c.object
<CustomObject>
    <fields>
        <fullName>Display_As__c</fullName>
        <label>Display As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Sponsors</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Image_Id__c</fullName>
        <label>Logo Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <inlineHelpText>Main website of Sponsor or other provided URL.</inlineHelpText>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsorships</relationshipLabel>
        <relationshipName>Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sponsor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Level__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Display_As__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Sponsor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>